--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "humps": "^2.0.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.4",
+    "moment": "^2.19.3",
     "normalizr": "^3.2.4",
     "query-string": "^5.0.1",
     "react": "^16.2.0",
